--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,23 @@ en:
       questions:	"Questions"
       news:				"News"
       contact:		"Contact"
+
+  store:
+    index:
+      title_html: "Catalog"
+      add_html:   "Add to Cart"
+
+  carts:
+    cart:
+      title:     "Your Cart"
+      empty:     "Empty Cart"
+      checkout:  "Checkout"
+
+  number:
+    currency:
+      format:
+        unit:      "$"
+        precision:  2
+        separator: "."
+        delimiter: ","
+        format:    "%u%n"
