--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -6,3 +6,23 @@ es:
       questions:	"Preguntas"
       news:				"Noticias"
       contact:		"Contacto"
+
+  store:
+    index:
+      title_html: "Cat&aacute;logo"
+      add_html:   "A&ntilde;adir al Carrito"
+
+  carts:
+    cart:
+      title:     "Carrito de la Compra"
+      empty:     "Vaciar Carrito"
+      checkout:  "Comprar"
+
+  number:
+    currency:
+      format:
+        unit:      "$US"
+        precision:  2
+        separator: ","
+        delimiter: "."
+        format:    "%n&nbsp;%u"
