--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,3 +26,16 @@ en:
         separator: "."
         delimiter: ","
         format:    "%u%n"
+
+  orders:
+    new:
+      legend:          "Please Enter your Details"
+    form:
+      name:            "Name"
+      address_html:    "Address"
+      email:           "E-mail"
+      pay_type:        "Pay with"
+      pay_prompt_html: "Select a payment method"
+      submit:          "Place Order"
+  
+  thanks: "Thank you for your order"
